apps/morel/website/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: morel
  namespace: morel
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - morel.rs
    - www.morel.rs
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: morel
          port: 8080
